deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-basic-auth
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-basic-auth
  template:
    metadata:
      labels:
        app: demo-basic-auth
    spec:
      containers:
      - image: kennethreitz/httpbin
        name: httpbin
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-backend
  template:
    metadata:
      labels:
        app: demo-backend
    spec:
      containers:
      - image: hashicorp/http-echo
        name: http-echo
        args:
        - -text="hello world"
        ports:
        - containerPort: 5678
