backend1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment1
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend1
  template:
    metadata:
      labels:
        app: backend1
    spec:
      containers:
      - image: hashicorp/http-echo
        name: backend1
        args:
        - -text="this page is served by backend1"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: backend1
spec:
  selector:
    app: backend1
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 5678
