backend2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment2
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
      - image: hashicorp/http-echo
        name: backend2
        args:
        - -text="this page is served by backend2"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: backend2
spec:
  selector:
    app: backend2
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 5678
