basic-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-auth
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: basic-auth
  template:
    metadata:
      labels:
        app: basic-auth
    spec:
      containers:
      - image: kennethreitz/httpbin
        name: httpbin
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: basic-auth
spec:
  selector:
    app: basic-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
