service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-basic-auth
spec:
  selector:
    app: demo-basic-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
spec:
  selector:
    app: demo-backend
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 5678
